# qt-taskmanager

./: CMakeLists.txt  README.md
include/: mainwindow.h  task.h
src/: main.cpp  mainwindow.cpp  task.cpp
ui/: mainwindow.ui
